# libreca

./: .gitignore  CLA.md  CODE_OF_CONDUCT.md  COPYING.md  README.md  TRADEMARK-POLICY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  desktop-build.yml  web-deploy.yml
apps/desktop/: README.md
apps/desktop/packaging/linux/AppImage/: libreca.desktop
apps/desktop/packaging/linux/deb/DEBIAN/: control  postinst  prerm
apps/desktop/packaging/linux/deb/usr/share/applications/: libreca.desktop
apps/desktop/packaging/macos/: Info.plist.template  README.txt  entitlements-debug.plist  entitlements.plist  sign-notarize.sh   libreca-dmg.json
apps/desktop/packaging/windows/: README.txt  libreca.nsi  license.txt  sign-installer.ps1
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/server/: tsconfig.json
apps/server/src/: index.ts
apps/web/: next.config.mjs  package.json  tailwind.config.mjs  tsconfig.json
apps/web/public/: README.txt
apps/web/src/: globals.css
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: HexGrid.tsx
apps/web/src/lib/: supabase.ts
docs/architecture/: 01-context.md  02-container.md  03-component-web.md  04-sequence-login.md  README.md
docs/branding/: 01-logo.md  02-colors.md  03-typography.md  04-icons.md  README.md
docs/specs/: template.md
