```toml
[package]
name = "libreca-desktop"
version = "0.1.0"
authors = ["Pedro Brito <pedrotirb@icloud.com>"]
edition = "2021"

[dependencies]
tauri = { version = "1.6", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = "1.6"

[package]
name = "libreca-desktop"
version = "0.1.0"
authors = ["Pedro Brito <pedrotirb@icloud.com>"]
edition = "2021"

[dependencies]
tauri = { version = "1.6", features = ["api-all"] }
tauri-plugin-window-state = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = "1.6"